--- a/package.json
+++ b/package.json
@@ -1,21 +1,50 @@
 {
-  "name": "mealstogo",
+  "name": "placestodine",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
-    "expo": "~46.0.9",
+    "@expo-google-fonts/lato": "^0.2.2",
+    "@expo-google-fonts/oswald": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/stack": "^6.3.1",
+    "camelize": "^1.0.0",
+    "expo": "^46.0.13",
+    "expo-app-loading": "~2.1.0",
+    "expo-camera": "~12.3.0",
+    "expo-font": "~10.2.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
+    "firebase": "^9.10.0",
+    "firebase-admin": "^11.1.0",
+    "firebase-functions": "^3.24.1",
+    "install": "^0.13.0",
+    "lottie-react-native": "5.1.3",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
+    "react-native-paper": "^4.12.4",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
+    "react-native-webview": "11.23.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@react-native-community/eslint-config": "^3.1.0",
+    "eslint": "^8.23.0",
+    "prettier": "^2.7.1"
   },
   "private": true
 }
